GNU coreutils NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]


* Noteworthy changes in release 8.28 (2017-09-01) [stable]

** Bug fixes

  cp and mv now merely warn about any failure to preserve symlink ownership.
  Before, cp (without -p) would exit with a failure status, and a cross-device
  mv would leave such symlinks behind in the source file system.
  [the bug dates back to the initial implementation]

  When creating numbered backups, cp, install, ln, and mv now avoid
  races that could lose backup data in unlikely circumstances.  Since
  the fix relies on the renameat2 system call of Linux kernel 3.15 and
  later, the races are still present on other platforms.
  [the bug dates back to the initial implementation]

  cp, install, ln, and mv no longer lose data when asked to copy a
  backup file to its original via a differently-spelled file name.
  E.g., 'rm -f a a~; : > a; echo data > a~; cp --backup=simple a~ ./a'
  now fails instead of losing the data.
  [the bug dates back to the initial implementation]

  cp, install, ln, and mv now ignore nonsensical backup suffixes.
  For example, --suffix='/' and --suffix='' are now no-ops.
  [the bug dates back to the initial implementation]

  date and touch no longer overwrite the heap with large
  user specified TZ values (CVE-2017-7476).
  [bug introduced in coreutils-8.27]

  dd status=progress now just counts seconds; e.g., it outputs "6 s"
  consistently rather than sometimes outputting "6.00001 s".
  [bug introduced in coreutils-8.24]

  df no longer interacts with excluded file system types, so for example
  specifying -x nfs no longer hangs with problematic nfs mounts.
  [bug introduced in coreutils-8.21]

  df no longer interacts with dummy file system types, so for example
  no longer hangs with problematic nfs mounted via system.automount(5).
  [bug introduced in coreutils-8.21]
